--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
-blib/
-.build/
-_build/
-cover_db/
-inc/
-Build
-Build.bat
-.last_cover_stats
-Makefile
-Makefile.old
-MANIFEST.bak
-META.yml
-MYMETA.yml
-nytprof.out
-pm_to_blib
+*.pkg.tar.xz
+*.tar.gz
+pkg/
+src/
