--- a/perl-cpan-meta-requirements/PKGBUILD
+++ b/perl-cpan-meta-requirements/PKGBUILD
@@ -1,21 +1,21 @@
-# CPAN Name  : Text-Glob
+# CPAN Name  : CPAN-Meta-Requirements
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
 
-pkgname='perl-text-glob'
-pkgver='0.09'
+pkgname='perl-cpan-meta-requirements'
+pkgver='2.122'
 pkgrel='1'
-pkgdesc="match globbing patterns against text"
+pkgdesc="a set of version requirements for a CPAN dist"
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
 makedepends=()
-url='http://search.cpan.org/dist/Text-Glob'
-source=('http://search.cpan.org/CPAN/authors/id/R/RC/RCLAMP/Text-Glob-0.09.tar.gz')
-md5sums=('1daa10e087f891c49b720a5c551a024b')
-sha512sums=('9b729e4ece88ad79e1b637c7f35e5e1ecae3fd7f62c408ed4f3fcac2e8e8afff32d7d805e1b0269800aada5ae609d03335d42ac54def2797d301e91fa488ae47')
-_distdir="${srcdir}/Text-Glob-0.09"
+url='http://search.cpan.org/dist/CPAN-Meta-Requirements'
+source=('http://search.cpan.org/CPAN/authors/id/D/DA/DAGOLDEN/CPAN-Meta-Requirements-2.122.tar.gz')
+md5sums=('37f62b1e5c254ddc852bac6872f053ba')
+sha512sums=('cd77c003caf870b16c7ab51e99cc15919f4c93487a0bdf33104bed5a1ed3adabadf27f04d69d4a87700f8d01f22d71c6e4401edc8fa1800a3306cac3896c96d5')
+_distdir="${srcdir}/CPAN-Meta-Requirements-2.122"
 
 build() {
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
