--- a/perl-moose/PKGBUILD
+++ b/perl-moose/PKGBUILD
@@ -1,20 +1,21 @@
-# Contributor: chimeracoder <dev@chimeracoder.net>
-# Generator  : CPANPLUS::Dist::Arch 1.19
+# CPAN Name  : Moose
+# Maintainer : Alan Young <harleypig@gmail.com>
+# Generator  : CPANPLUS::Dist::Arch 1.21
 
 pkgname='perl-moose'
-pkgver='2.0402'
+pkgver='2.0602'
 pkgrel='1'
 pkgdesc="A postmodern object system for Perl 5"
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
-depends=('perl-class-load>=0.09' 'perl-class-load-xs>=0.01' 'perl-data-optlist>=0.107' 'perl-devel-globaldestruction-git' 'perl-dist-checkconflicts>=0.02' 'perl-eval-closure>=0.04' 'perl-list-moreutils>=0.28' 'perl-mro-compat>=0.05' 'perl-package-deprecationmanager>=0.11' 'perl-package-stash>=0.32' 'perl-package-stash-xs>=0.24' 'perl-params-util>=1.00' 'perl-sub-exporter>=0.980' 'perl-sub-name>=0.05' 'perl-task-weaken' 'perl-try-tiny>=0.02')
-makedepends=('perl-dist-checkconflicts>=0.02' 'perl-test-fatal>=0.001' 'perl-test-requires>=0.05')
+depends=('perl-class-load>=0.09' 'perl-class-load-xs>=0.01' 'perl-data-optlist>=0.107' 'perl-devel-globaldestruction' 'perl-dist-checkconflicts>=0.02' 'perl-eval-closure>=0.04' 'perl-list-moreutils>=0.28' 'perl-mro-compat>=0.05' 'perl-package-deprecationmanager>=0.11' 'perl-package-stash>=0.32' 'perl-package-stash-xs>=0.24' 'perl-params-util>=1.00' 'perl-sub-exporter>=0.980' 'perl-sub-name>=0.05' 'perl-task-weaken' 'perl-try-tiny>=0.02')
+makedepends=('perl-test-fatal>=0.001' 'perl-test-requires>=0.05')
 url='http://search.cpan.org/dist/Moose'
-source=('http://search.cpan.org/CPAN/authors/id/D/DO/DOY/Moose-2.0402.tar.gz')
-md5sums=('d5da95d9e72ba83d0a11840ab83310d1')
-sha512sums=('9f3bbadb0bb8ffbc701e457fc670e630217de7b83c2d241e879086a03ddf4a19a291b6b55160248eab2a2c74dc981920422978e0189938f540ea2db404277882')
-_distdir="${srcdir}/Moose-2.0402"
+source=('http://search.cpan.org/CPAN/authors/id/D/DO/DOY/Moose-2.0602.tar.gz')
+md5sums=('50ea31986dda9f196b9437661664a7bf')
+sha512sums=('c5e25a380f70db54567eb1dc59c7b3aadf27498aa413945743744fdf9c83c85778365d91bd0d2b7a8338db74c3a349cf0eb570699432bea638d66791d5dce81d')
+_distdir="${srcdir}/Moose-2.0602"
 
 build() {
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
@@ -24,21 +25,21 @@ build() {
       MODULEBUILDRC=/dev/null
 
     cd "$_distdir"
-    /usr/bin/perl Makefile.PL
-    make
+    /usr/bin/perl Build.PL
+    /usr/bin/perl Build
   )
 }
 
 check() {
   cd "$_distdir"
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""
-    make test
+    /usr/bin/perl Build test
   )
 }
 
 package() {
   cd "$_distdir"
-  make install
+  /usr/bin/perl Build install
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
 
