--- a/perl-net-cloudstack/PKGBUILD
+++ b/perl-net-cloudstack/PKGBUILD
@@ -1,21 +1,21 @@
-# CPAN Name  : Text-Glob
-# Maintainer : Alan Young <harleypig@gmail.com>
+# CPAN Name  : Net-CloudStack
+# Contributor: Anonymous
 # Generator  : CPANPLUS::Dist::Arch 1.21
 
-pkgname='perl-text-glob'
-pkgver='0.09'
+pkgname='perl-net-cloudstack'
+pkgver='0.01002'
 pkgrel='1'
-pkgdesc="match globbing patterns against text"
+pkgdesc="Bindings for the CloudStack API"
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
-depends=('perl')
+depends=('perl-http-message' 'perl-json' 'perl-libwww' 'perl-mouse' 'perl-uri-encode' 'perl-xml-simple' 'perl-xml-twig')
 makedepends=()
-url='http://search.cpan.org/dist/Text-Glob'
-source=('http://search.cpan.org/CPAN/authors/id/R/RC/RCLAMP/Text-Glob-0.09.tar.gz')
-md5sums=('1daa10e087f891c49b720a5c551a024b')
-sha512sums=('9b729e4ece88ad79e1b637c7f35e5e1ecae3fd7f62c408ed4f3fcac2e8e8afff32d7d805e1b0269800aada5ae609d03335d42ac54def2797d301e91fa488ae47')
-_distdir="${srcdir}/Text-Glob-0.09"
+url='http://search.cpan.org/dist/Net-CloudStack'
+source=('http://search.cpan.org/CPAN/authors/id/S/SN/SNUMANO/Net-CloudStack-0.01002.tar.gz')
+md5sums=('0a8162acaeaf3edfa5934e64329ea328')
+sha512sums=('f9da722a73a2918c1c91ef2c101a75f66bd9e1ca6e542f8a7a7a278f75b07a1b27275690ab4741c95a8e59ca6fd4155d794f82bbaab5adfd64f034c302843a44')
+_distdir="${srcdir}/Net-CloudStack-0.01002"
 
 build() {
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
@@ -25,21 +25,22 @@ build() {
       MODULEBUILDRC=/dev/null
 
     cd "$_distdir"
-    /usr/bin/perl Build.PL
-    /usr/bin/perl Build
+    /usr/bin/perl Makefile.PL
+    make
   )
 }
 
 check() {
   cd "$_distdir"
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""
-    /usr/bin/perl Build test
+    make test
   )
 }
 
 package() {
   cd "$_distdir"
-  /usr/bin/perl Build install
+  make install
+
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
 
