--- a/perl-template-plugin-stash/PKGBUILD
+++ b/perl-template-plugin-stash/PKGBUILD
@@ -1,21 +1,21 @@
-# CPAN Name  : Text-Glob
+# CPAN Name  : Template-Plugin-Stash
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
 
-pkgname='perl-text-glob'
-pkgver='0.09'
+pkgname='perl-template-plugin-stash'
+pkgver='1.006'
 pkgrel='1'
-pkgdesc="match globbing patterns against text"
+pkgdesc="expose the stash, ideal for Dumpering..."
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
-depends=('perl')
+depends=('perl-template-toolkit')
 makedepends=()
-url='http://search.cpan.org/dist/Text-Glob'
-source=('http://search.cpan.org/CPAN/authors/id/R/RC/RCLAMP/Text-Glob-0.09.tar.gz')
-md5sums=('1daa10e087f891c49b720a5c551a024b')
-sha512sums=('9b729e4ece88ad79e1b637c7f35e5e1ecae3fd7f62c408ed4f3fcac2e8e8afff32d7d805e1b0269800aada5ae609d03335d42ac54def2797d301e91fa488ae47')
-_distdir="${srcdir}/Text-Glob-0.09"
+url='http://search.cpan.org/dist/Template-Plugin-Stash'
+source=('http://search.cpan.org/CPAN/authors/id/P/PO/PODMASTER/Template-Plugin-Stash-1.006.tar.gz')
+md5sums=('8c640985f5b36a30a5af4cd5ab455b97')
+sha512sums=('156e155ce7b571656f96099580c6cf876d6743c75621b71bf63a2855d448394d845b4fa69e20ed98192e914fd6093ced03c30253f1dc69b4c08288c6ccb87d56')
+_distdir="${srcdir}/Template-Plugin-Stash-Template-Plugin-Stash"
 
 build() {
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
@@ -25,21 +25,21 @@ build() {
       MODULEBUILDRC=/dev/null
 
     cd "$_distdir"
-    /usr/bin/perl Build.PL
-    /usr/bin/perl Build
+    /usr/bin/perl Makefile.PL
+    make
   )
 }
 
 check() {
   cd "$_distdir"
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""
-    /usr/bin/perl Build test
+    make test
   )
 }
 
 package() {
   cd "$_distdir"
-  /usr/bin/perl Build install
+  make install
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
 
