--- a/perl-test-useallmodules/PKGBUILD
+++ b/perl-test-useallmodules/PKGBUILD
@@ -1,21 +1,21 @@
-# CPAN Name  : Text-Glob
+# CPAN Name  : Test-UseAllModules
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
 
-pkgname='perl-text-glob'
-pkgver='0.09'
+pkgname='perl-test-useallmodules'
+pkgver='0.13'
 pkgrel='1'
-pkgdesc="match globbing patterns against text"
+pkgdesc="do use_ok() for all the MANIFESTed modules"
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl')
 makedepends=()
-url='http://search.cpan.org/dist/Text-Glob'
-source=('http://search.cpan.org/CPAN/authors/id/R/RC/RCLAMP/Text-Glob-0.09.tar.gz')
-md5sums=('1daa10e087f891c49b720a5c551a024b')
-sha512sums=('9b729e4ece88ad79e1b637c7f35e5e1ecae3fd7f62c408ed4f3fcac2e8e8afff32d7d805e1b0269800aada5ae609d03335d42ac54def2797d301e91fa488ae47')
-_distdir="${srcdir}/Text-Glob-0.09"
+url='http://search.cpan.org/dist/Test-UseAllModules'
+source=('http://search.cpan.org/CPAN/authors/id/I/IS/ISHIGAKI/Test-UseAllModules-0.13.tar.gz')
+md5sums=('b591f8f8de76dd36422a60e2d02fcbdd')
+sha512sums=('f54255c53d5cce6163d9c99ca37d4aff938f1718186eb66249405573a8695487122882854ffbf17b248649b6100ff7a5a12da768ba94a8c08c699c477092a7c6')
+_distdir="${srcdir}/Test-UseAllModules-0.13"
 
 build() {
   ( export PERL_MM_USE_DEFAULT=1 PERL5LIB=""                 \
