--- a/perl-version-next/PKGBUILD
+++ b/perl-version-next/PKGBUILD
@@ -1,27 +1,23 @@
-# CPAN Name  : CPAN-Meta-Check
+# CPAN Name  : Version-Next
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
+# Repository : http://github.com/harleypig/aur-packages
 
 arch=('any')
-backup=()
-conflicts=()
-depends=('perl-cpan-meta' 'perl-cpan-meta-requirements')
-install=
+depends=('perl-sub-exporter')
 license=('PerlArtistic' 'GPL')
-makedepends=('perl-test-differences')
-md5sums=('a05c3d14f1de09416ca601922dd52560')
+makedepends=('perl-test-exception>=0.29')
+md5sums=('abf120bdaa094c3c8fcf23bbb21e34e8')
 options=('!emptydirs')
-pkgdesc="Verify requirements in a CPAN::Meta object"
-pkgname='perl-cpan-meta-check'
-pkgrel='3'
-pkgver='0.004'
-provides=()
-replaces=()
-sha512sums=('651905e815ac4f004a9fc7fda678d265d2b629bc11fe2ad234c0c85531de505bea13f7f64f455ef3790860870599b5365d6a40ad1d0ecf714c90c1cdc78c9a97')
-source=('http://search.cpan.org/CPAN/authors/id/L/LE/LEONT/CPAN-Meta-Check-0.004.tar.gz')
-url='http://search.cpan.org/dist/CPAN-Meta-Check'
+pkgdesc="increment module version numbers simply and correctly"
+pkgname='perl-version-next'
+pkgrel='2'
+pkgver='0.002'
+sha512sums=('bdae25c0f47b469684616d6f0c3a92c4f622cb1b4e09b015aaf11e9895d9d5d958dd6884d3ce2a71ede9139242a8c05ab4f9c4f9cf5a500a9f5b745342213743')
+source=('http://search.cpan.org/CPAN/authors/id/D/DA/DAGOLDEN/Version-Next-0.002.tar.gz')
+url='http://search.cpan.org/dist/Version-Next'
 
-_distdir="${srcdir}/CPAN-Meta-Check-0.004"
+_distdir="${srcdir}/Version-Next-0.002"
 
 build() {
 
