added more packages

--- a/perl-b-utils/PKGBUILD
+++ b/perl-b-utils/PKGBUILD
@@ -1,23 +1,23 @@
-# CPAN Name  : DBIx-Class-Schema-Loader
+# CPAN Name  : B-Utils
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
 # Repository : http://github.com/harleypig/aur-packages
 
-arch=('any')
-depends=('perl>=5.8.1' 'perl-carp-clan' 'perl-class-accessor-grouped>=0.10002' 'perl-class-c3-componentised>=1.0008' 'perl-class-inspector>=1.27' 'perl-class-unload' 'perl-data-dump>=1.06' 'perl-dbix-class>=0.08127' 'perl-hash-merge' 'perl-lingua-en-inflect-number>=1.1' 'perl-lingua-en-inflect-phrase>=0.02' 'perl-lingua-en-tagger' 'perl-list-moreutils' 'perl-mro-compat>=0.09' 'perl-namespace-clean>=0.20' 'perl-scope-guard' 'perl-string-camelcase>=0.02' 'perl-string-toidentifier-en>=0.05' 'perl-sub-name' 'perl-task-weaken' 'perl-try-tiny')
+arch=('i686' 'x86_64')
+depends=('perl>=5.006' 'perl-task-weaken')
 license=('PerlArtistic' 'GPL')
-makedepends=('perl-config-any' 'perl-config-general' 'perl-dbd-sqlite>=1.29' 'perl-dbi>=1.56' 'perl-dbix-class-introspectablem2m' 'perl-moose>=1.12' 'perl-moosex-markasmethods>=0.13' 'perl-moosex-nonmoose>=0.16' 'perl-namespace-autoclean>=0.09' 'perl-test-exception' 'perl-test-warn>=0.21')
-md5sums=('002fa6d750926fff75843597460f0575')
+makedepends=('perl-extutils-depends>=0.301')
+md5sums=('5e6af42f436918253137d367b52478cd')
 options=('!emptydirs')
-pkgdesc="Create a DBIx::Class::Schema based on a database"
-pkgname='perl-dbix-class-schema-loader'
+pkgdesc="Helper functions for op tree manipulation"
+pkgname='perl-b-utils'
 pkgrel='2'
-pkgver='0.07025'
-sha512sums=('94c34279d9469aa8d8ec29abe01a4b4c07fdcca8c323043fbc74cbc4577e9241779d865dc3f9c497a021ff314a7b31972e3027168250295f4f4dbfd3414c7b99')
-source=('http://search.cpan.org/CPAN/authors/id/R/RK/RKITOVER/DBIx-Class-Schema-Loader-0.07025.tar.gz')
-url='http://search.cpan.org/dist/DBIx-Class-Schema-Loader'
+pkgver='0.21'
+sha512sums=('2f5145e042980e625d8ee653b697ca3de425c2e046d2dd0cbe64cb05fb9868bf9ec0a859208ae62194d4aae9d79d4feca97e3658b1ea49adfe70634c02ee7104')
+source=('http://search.cpan.org/CPAN/authors/id/J/JJ/JJORE/B-Utils-0.21.tar.gz')
+url='http://search.cpan.org/dist/B-Utils'
 
-_distdir="${srcdir}/DBIx-Class-Schema-Loader-0.07025"
+_distdir="${srcdir}/B-Utils-0.21"
 
 build() {
 
