--- a/perl-method-signatures/PKGBUILD
+++ b/perl-method-signatures/PKGBUILD
@@ -1,23 +1,23 @@
-# CPAN Name  : DBIx-Class-Schema-Loader
+# CPAN Name  : Method-Signatures
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
 # Repository : http://github.com/harleypig/aur-packages
 
 arch=('any')
-depends=('perl>=5.8.1' 'perl-carp-clan' 'perl-class-accessor-grouped>=0.10002' 'perl-class-c3-componentised>=1.0008' 'perl-class-inspector>=1.27' 'perl-class-unload' 'perl-data-dump>=1.06' 'perl-dbix-class>=0.08127' 'perl-hash-merge' 'perl-lingua-en-inflect-number>=1.1' 'perl-lingua-en-inflect-phrase>=0.02' 'perl-lingua-en-tagger' 'perl-list-moreutils' 'perl-mro-compat>=0.09' 'perl-namespace-clean>=0.20' 'perl-scope-guard' 'perl-string-camelcase>=0.02' 'perl-string-toidentifier-en>=0.05' 'perl-sub-name' 'perl-task-weaken' 'perl-try-tiny')
+depends=('perl>=5.8.1' 'perl-any-moose>=0.11' 'perl-const-fast>=0.006' 'perl-data-alias>=1.08' 'perl-devel-beginlift>=0.001001' 'perl-devel-declare>=0.006002' 'perl-devel-pragma>=0.40' 'perl-mouse>=0.64' 'perl-ppi>=1.203' 'perl-sub-name>=0.03')
 license=('PerlArtistic' 'GPL')
-makedepends=('perl-config-any' 'perl-config-general' 'perl-dbd-sqlite>=1.29' 'perl-dbi>=1.56' 'perl-dbix-class-introspectablem2m' 'perl-moose>=1.12' 'perl-moosex-markasmethods>=0.13' 'perl-moosex-nonmoose>=0.16' 'perl-namespace-autoclean>=0.09' 'perl-test-exception' 'perl-test-warn>=0.21')
-md5sums=('002fa6d750926fff75843597460f0575')
+makedepends=('perl-test-exception>=0.29' 'perl-test-warn>=0.10')
+md5sums=('ea9668d27a109e3e49216b1ef3879adf')
 options=('!emptydirs')
-pkgdesc="Create a DBIx::Class::Schema based on a database"
-pkgname='perl-dbix-class-schema-loader'
-pkgrel='2'
-pkgver='0.07025'
-sha512sums=('94c34279d9469aa8d8ec29abe01a4b4c07fdcca8c323043fbc74cbc4577e9241779d865dc3f9c497a021ff314a7b31972e3027168250295f4f4dbfd3414c7b99')
-source=('http://search.cpan.org/CPAN/authors/id/R/RK/RKITOVER/DBIx-Class-Schema-Loader-0.07025.tar.gz')
-url='http://search.cpan.org/dist/DBIx-Class-Schema-Loader'
+pkgdesc="method and function declarations with signatures and no source filter"
+pkgname='perl-method-signatures'
+pkgrel='1'
+pkgver='20120523'
+sha512sums=('28cb22727b8d1f372b6210a82c241abbd65a74ebfe0fc83515ca43192f50fcf70d6cd1ce117f241dda48ef50dc6d0a6d505af65c372779e9875af85eb6672591')
+source=('http://search.cpan.org/CPAN/authors/id/B/BA/BAREFOOT/Method-Signatures-20120523.tar.gz')
+url='http://search.cpan.org/dist/Method-Signatures'
 
-_distdir="${srcdir}/DBIx-Class-Schema-Loader-0.07025"
+_distdir="${srcdir}/Method-Signatures-20120523"
 
 build() {
 
