--- a/perl-parse-cpan-meta/PKGBUILD
+++ b/perl-parse-cpan-meta/PKGBUILD
@@ -1,23 +1,23 @@
-# CPAN Name  : Git-CPAN-Patch
+# CPAN Name  : Parse-CPAN-Meta
 # Maintainer : Alan Young <harleypig@gmail.com>
 # Generator  : CPANPLUS::Dist::Arch 1.21
 # Repository : http://github.com/harleypig/aur-packages
 
 arch=('any')
-depends=('perl>=5.10.0' 'perl-backpan-index' 'perl-class' 'perl-datetime-format-w3cdtf' 'perl-file-chdir' 'perl-file-chmod' 'perl-git-repository' 'perl-libwww' 'perl-metacpan-api' 'perl-method-signatures' 'perl-moose' 'perl-moosex-app-cmd' 'perl-moosex-semiaffordanceaccessor')
+depends=('perl-cpan-meta-yaml>=0.008')
 license=('PerlArtistic' 'GPL')
-makedepends=('perl-test-compile')
-md5sums=('fb958b5c3738cdbbaee22ac55dc68a9d')
+makedepends=()
+md5sums=('5fd0e1b3dac224ad647953f97f2c568f')
 options=('!emptydirs')
-pkgdesc="Patch CPAN modules using Git"
-pkgname='perl-git-cpan-patch'
-pkgrel='1'
-pkgver='0.8.0'
-sha512sums=('efdec02e218581e04520a5c8a6f6b1a59c7d61f0e1e9604de5b05f706bf8a8e82896d674049ae20b75d1aadab8d6ce0d7ed3c70980813ecfd8fddb46127aeec0')
-source=('http://search.cpan.org/CPAN/authors/id/Y/YA/YANICK/Git-CPAN-Patch-0.8.0.tar.gz')
-url='http://search.cpan.org/dist/Git-CPAN-Patch'
+pkgdesc="Parse META.yml and META.json CPAN metadata files"
+pkgname='perl-parse-cpan-meta'
+pkgrel='2'
+pkgver='1.4404'
+sha512sums=('e05bc835e543803301c5297d723e138fcaa8d674d970db8926dfdef813557c9c005287fb96c65ba65baafee48ced355964dea6cbab4f06b6a347b3012299b2fd')
+source=('http://search.cpan.org/CPAN/authors/id/D/DA/DAGOLDEN/Parse-CPAN-Meta-1.4404.tar.gz')
+url='http://search.cpan.org/dist/Parse-CPAN-Meta'
 
-_distdir="${srcdir}/Git-CPAN-Patch-0.8.0"
+_distdir="${srcdir}/Parse-CPAN-Meta-1.4404"
 
 build() {
 
