--- a/notmaintainer/perl-cpan-meta/PKGBUILD
+++ b/notmaintainer/perl-cpan-meta/PKGBUILD
@@ -12,8 +12,8 @@ depends=('perl')
 makedepends=()
 url='http://search.cpan.org/dist/CPAN-Meta'
 source=('http://search.cpan.org/CPAN/authors/id/D/DA/DAGOLDEN/CPAN-Meta-2.120921.tar.gz')
-#md5sums=('7276ea318cfa9a49826c3b63e681503a')
-#sha512sums=('8cd22d445c7a464f107d3c71a68490772e2b6b2f3d5805439b48179c17a65af76e4bc52018919f807cbc5be135bc0853970477bf1bdf59c244edc3242f369f19')
+md5sums=('83d00ee341ca2a6d8d5e5f9d4bd9d41e')
+sha512sums=('0a20ce69515c7f52656bd6d9354ea16419cd2b7cd604ebbd5b07518ff08766d0173b23f6ea6b7a4532d0dbde8f51312d869636a41f12bd743ec96362f5725a55')
 _distdir="${srcdir}/CPAN-Meta-2.120921"
 
 build() {
